envoy-filter-bootstrap-wasm.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: envoy-filter-demo
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: istio-ingressgateway
  configPatches:
  - applyTo: BOOTSTRAP
    patch:
      operation: MERGE
      value:
        bootstrap_extensions:
          - name: envoy.bootstrap.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.wasm.v3.WasmService
              singleton: true
              config:
                name: wasm-bootstrap-extension
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {}
                vm_config:
                  runtime: "envoy.wasm.runtime.v8"
                  code:
                    remote:
                      http_uri:
                        uri: https://github.com/alexthemonk/Wasm-Envoy-Filter/raw/master/test-wasm-plugin/envoy-filter.wasm
